# model-analysis

./: .gitignore  .pre-commit-config.yaml  404.html  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  WORKSPACE  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-docs.txt  setup.py
.github/workflows/: ci-lint.yml  ci-test.yml  docs.yml  wheels.yml
architecture/: index.html
docs/: _toc.yaml  architecture.md  eval_saved_model.md  faq.md  get_started.md  getting_started.md  index.md  install.md  metrics.md  model_validations.md  post_export_metrics.md  setup.md  visualizations.md
eval_saved_model/: index.html
examples/chicago_taxi/: Dockerfile  README.md  chicago_taxi_client.py  chicago_taxi_tfma.ipynb  chicago_taxi_tfma_local_playground.ipynb  classify_local.sh  classify_mlengine.sh  custom_requirements.txt  preprocess.py  preprocess_dataflow.sh  preprocess_flink.sh  preprocess_local.sh  process_tfma.py  process_tfma_dataflow.sh  process_tfma_local.sh  setup.py  start_model_server_cloud.sh  start_model_server_local.sh  start_model_server_mlengine.sh  tfdv_analyze_and_validate.py  tfdv_analyze_and_validate_dataflow.sh  tfdv_analyze_and_validate_dataflow_portable.sh  tfdv_analyze_and_validate_flink.sh  train_local.sh  train_mlengine.sh
faq/: index.html
g3doc/: _toc.yaml  architecture.md  faq.md  get_started.md  getting_started.md  index.md  install.md  metrics.md  model_validations.md  post_export_metrics.md  setup.md
get_started/: index.html
install/: index.html
metrics/: index.html
model_validations/: index.html
post_export_metrics/: index.html
search/: search_index.json
setup/: index.html
tensorflow_model_analysis/: BUILD  __init__.py  config.py  config_test.py  conftest.py  constants.py  math_util.py  math_util_test.py  model_util.py  model_util_test.py  sdk.py  size_estimator.py  size_estimator_test.py  types.py  types_compat.py  util.py  util_test.py  version.py
tensorflow_model_analysis/addons/: __init__.py
tensorflow_model_analysis/api/: BUILD  __init__.py  dataframe.py  dataframe_test.py  model_eval_lib.py  model_eval_lib_test.py  tfma_unit.py  tfma_unit_test.py  types.py  types_test.py  verifier_lib.py
tensorflow_model_analysis/contrib/: BUILD  export.py  export_test.py  model_eval_lib.py  model_eval_lib_test.py
tensorflow_model_analysis/eval_metrics_graph/: eval_metrics_graph.py
tensorflow_model_analysis/eval_saved_model/: BUILD  __init__.py  constants.py  dofn.py  encoding.py  encoding_test.py  export.py  export_test.py  exporter.py  exporter_test.py  graph_ref.py  graph_ref_test.py  integration_test.py  load.py  testutil.py  testutil_test.py  util.py  util_test.py
tensorflow_model_analysis/evaluators/: __init__.py  aggregate.py  aggregate_test.py  analysis_table_evaluator.py  analysis_table_evaluator_test.py  confidence_intervals_util.py  confidence_intervals_util_test.py  counter_util.py  counter_util_test.py  eval_saved_model_util.py  eval_saved_model_util_test.py  evaluator.py  evaluator_test.py  jackknife.py  jackknife_test.py  keras_util.py  keras_util_test.py  legacy_aggregate.py  legacy_aggregate_test.py  legacy_metrics_and_plots_evaluator.py  legacy_metrics_and_plots_evaluator_test.py  legacy_poisson_bootstrap.py  legacy_poisson_bootstrap_test.py  legacy_query_based_metrics_evaluator.py  legacy_query_based_metrics_evaluator_test.py  metrics_and_plots_evaluator.py  metrics_and_plots_evaluator_test.py  metrics_and_plots_evaluator_v2.py  metrics_and_plots_evaluator_v2_test.py  metrics_plots_and_validations_evaluator.py  metrics_plots_and_validations_evaluator_test.py  metrics_validator.py  metrics_validator_test.py  poisson_bootstrap.py  poisson_bootstrap_test.py  query_based_metrics_evaluator.py  query_based_metrics_evaluator_test.py
tensorflow_model_analysis/examples/: tfma_object_detection.ipynb
tensorflow_model_analysis/experimental/: __init__.py  dataframe.py  dataframe_test.py
tensorflow_model_analysis/export_only/: __init__.py
tensorflow_model_analysis/extractors/: BUILD  __init__.py  auto_slice_key_extractor.py  auto_slice_key_extractor_test.py  batched_input_extractor.py  batched_input_extractor_test.py  batched_predict_extractor_v2.py  batched_predict_extractor_v2_test.py  counterfactual_predictions_extractor.py  counterfactual_predictions_extractor_test.py  example_weights_extractor.py  example_weights_extractor_test.py  extractor.py  extractor_test.py  feature_extractor.py  feature_extractor_test.py  features_extractor.py  features_extractor_test.py  inference_base.py  inference_base_test.py  input_extractor.py  input_extractor_test.py  labels_extractor.py  labels_extractor_test.py  legacy_feature_extractor.py  legacy_feature_extractor_test.py  legacy_input_extractor.py  legacy_input_extractor_test.py  legacy_meta_feature_extractor.py  legacy_meta_feature_extractor_test.py  legacy_predict_extractor.py  legacy_predict_extractor_test.py  legacy_tfjs_predict_extractor.py  legacy_tfjs_predict_extractor_test.py  legacy_tflite_predict_extractor.py  legacy_tflite_predict_extractor_test.py  materialized_predictions_extractor.py  materialized_predictions_extractor_test.py  meta_feature_extractor.py  meta_feature_extractor_test.py  (+21 more)
tensorflow_model_analysis/metrics/: __init__.py  aggregation.py  aggregation_test.py  attributions.py  attributions_test.py  auc_plot.py  auc_plot_test.py  binary_confusion_matrices.py  binary_confusion_matrices_test.py  bleu.py  bleu_test.py  calibration.py  calibration_histogram.py  calibration_histogram_test.py  calibration_plot.py  calibration_plot_test.py  calibration_test.py  confusion_matrix_at_thresholds.py  confusion_matrix_at_thresholds_test.py  confusion_matrix_metrics.py  confusion_matrix_metrics_test.py  confusion_matrix_plot.py  confusion_matrix_plot_test.py  cross_entropy_metrics.py  cross_entropy_metrics_test.py  exact_match.py  exact_match_test.py  example_count.py  example_count_test.py  flip_metrics.py  flip_metrics_test.py  mean_regression_error.py  mean_regression_error_test.py  metric_specs.py  (+54 more)
visualizations/: index.html
(+867 files in other folders)
